# atlantis

./: .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  404.html  CLI_Examples.md  Makefile  README.md  Valencia_2024_CLI_Examples.md  conftest.py  environment.yml  index.html  kilo.jsonc  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer-lock.json  devcontainer.json  dockerfile
.github/: dependabot.yml
.github/prompts/: plan-atlantisArchitecture.prompt.md
.github/workflows/: docs.yml  e2e.yml  e2e_info.yml  format_lint.yml  gitleaks.yml  nbstripout.yml  run-e2e-from-comment.yml  test.yml
api/batch/: index.html
api/config/: index.html
api/fetchers/: index.html
api/harmoniser/: index.html
api/layers/: index.html
api/models/: index.html
api/utils/: index.html
architecture/: index.html
archive/cog-build/: index.html
archive/cube-build/: index.html
archive/stac-and-viz/: index.html
archive/zarr-spec/: index.html
assets/: ks_catalogue.gpkg
cli/: index.html
cli-examples/: index.html
config/: asset_hashes.json
development/: index.html
docs/: README.md  cli.md  development.md  gdal-install.md  gfm_pipeline.md  kurosiwo-stac-design.md  layers.md  modis.md  modis_api.md  modis_internals.md  modis_pipeline.md  pixi-setup.md  setup.md  stac_zarr.md  test_improvement_handover.md  viirs.md  viirs_api.md  viirs_internals.md  viirs_pipeline.md
docs/api/: batch.md  config.md  fetchers.md  harmoniser.md  layers.md  models.md  utils.md
docs/archive/: cog-build.md  cube-build.md  raw_ml_layers_zarr.md  stac-and-viz.md  zarr-spec.md
docs/batch/viirs/: jpss.md
docs/gfm/: api.md  internals.md  overview.md  pipeline.md
docs/kurosiwo/: stac-design.md  stac_ks.md  stac_ks_labeled.md
docs/modis/: api.md  internals.md  overview.md  pipeline.md
docs/viirs/: Bare-land_VIIRS_ATBD.md  api.md  internals.md  overview.md  pipeline.md
gdal-install/: index.html
gfm/api/: index.html
gfm/internals/: index.html
gfm/overview/: index.html
gfm/pipeline/: index.html
kurosiwo/stac-design/: index.html
kurosiwo/stac_ks/: index.html
kurosiwo/stac_ks_labeled/: index.html
layers/: index.html
modis/api/: index.html
modis/internals/: index.html
modis/overview/: index.html
modis/pipeline/: index.html
notebooks/: zarr_datacube_showcase.ipynb
notebooks/drafts/: kurosiwo_eda.ipynb  kurosiwo_eda_copy.ipynb  kurosiwo_viirs_showcase_cli.ipynb  kurosiwo_viirs_showcase_python.ipynb  modis_composite_comparison.ipynb  report.md  validate_gfm_legend.ipynb  validate_modis_legend.ipynb  validate_viirs_legend.ipynb  verify_global_grid.ipynb
notebooks/ecmwf/: Bench_CMF_GFM_Inundation.ipynb  Bench_CMF_VIIRS_Inundation.ipynb  Extract_GFM_Inundation.ipynb  Extract_VIIRS_inundation.ipynb  README.md  Rivers-Inundation-Forecast.ipynb  gfm_env.yaml
pixi-setup/: index.html
scripts/: build_viirs_catalog.py  compare_zarr_cog.py  download_kurosiwo.py  extract_gfm.py  gen_docs_hook.py  generate_layer_docs.py  gfm_demo.py  list_stac_collections.py  setup.py  stac_demo.py  validate_viirs_zarr.py  viirs_demo.py
search/: search_index.json
setup/: index.html
sources/: index.html
src/: README.md
src/atlantis/: __init__.py  bookmarks.py  cli.py  config.py
src/atlantis/archive/: __init__.py  _store.py  cube_batch.py  datacube.py  grid.py  reader.py  writer.py
src/atlantis/batch/: __init__.py  catalog.py  config.py  orchestrator.py  tracker.py
src/atlantis/fetchers/: __init__.py  _dataset.py  base.py  gfm.py  registry.py  rfm.py  viirs.py  viirs_backend.py
src/atlantis/harmoniser/: __init__.py  normaliser.py  reprojector.py  tiler.py
src/atlantis/layers/: __init__.py  aggregation.py  docs.py  registry.py  spec.py
src/atlantis/models/: __init__.py  event.py  metadata.py
src/atlantis/stac/: __init__.py  datacube_catalog.py  geoparquet.py  io.py  stac_api.py  stac_catalog.py
src/atlantis/ui/: __init__.py  app.py  cli.py  models.py
src/atlantis/utils/: __init__.py  checklist.py  geo.py  io.py  kurosiwo.py  parquet.py  plot.py  setup.py  ui.py
src/atlantis/validation/: __init__.py  checker.py  ml_loader.py
src/atlantis/viz/: __init__.py  dashboard.py
tests/: __init__.py  pytest.toml  test_bookmarks.py  test_cli.py  test_config.py
tests/archive/: __init__.py  test_archive.py  test_cube_batch.py  test_cube_batch_unit.py  test_grid.py  test_reader.py  test_store.py
tests/batch/: test_catalog.py  test_config.py  test_orchestrator.py  test_orchestrator_unit.py  test_tracker.py
tests/fetchers/: __init__.py  _e2e_utils.py  conftest.py  test_backend.py  test_e2e_utils.py  test_fetcher_base.py  test_gfm.py  test_gfm_backend.py  test_gfm_e2e.py  test_gfm_processor.py  test_gfm_selection.py  test_modis_e2e.py  test_processor.py  test_registry.py  test_rfm.py  test_viirs.py  test_viirs_e2e.py  test_viirs_selection.py
tests/fetchers/gfm/: __init__.py  test_batch_processor.py  test_catalog.py  test_inventory.py  test_layers.py
tests/fetchers/modis/: __init__.py  test_backend.py  test_catalog.py  test_inventory.py  test_layers.py  test_modis.py  test_processor.py  test_selection.py
tests/fetchers/viirs/: test_batch_processor.py  test_catalog.py  (+2 more)
tests/harmoniser/: __init__.py  test_harmoniser.py  test_normaliser.py  test_reprojector.py
tests/layers/: __init__.py  test_aggregation.py  test_aggregation_sync.py  test_discovery.py  test_framework.py
tests/models/: test_event.py  test_metadata.py
tests/stac/: test_datacube_catalog.py  test_geoparquet.py  test_io.py
tests/ui/: __init__.py  test_cache_service.py  test_fetch_service.py  test_file_browser.py  test_forms.py  test_map_viewer.py  test_models.py  test_status.py
tests/utils/: test_checklist.py  test_geo.py  test_io.py  test_kurosiwo.py  test_plot.py  test_ui.py
tests/validation/: test_validation.py
tests/viz/: test_dashboard.py  test_from_stac.py
viirs/Bare-land_VIIRS_ATBD/: index.html
viirs/api/: index.html
viirs/internals/: index.html
viirs/overview/: index.html
viirs/pipeline/: index.html
(+45 files in other folders)
