[project]
name = "atlantis"
version = "0.1.0"
description = "ML-ready archive of satellite-derived flood inundation observations (ECMWF Code for Earth 2026)"
readme = "README.md"
requires-python = ">=3.10, <3.15"
authors = [
  { name = "Lagaras Stelios" },
  { name = "Ioannis Kalfas" },
]
dependencies = [
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
atlantis = "atlantis.cli:cli"

[project.optional-dependencies]
geo = [
    "xarray>=2024.1",
    "zarr>=3.0",
    "rioxarray>=0.15",
    "pystac-client>=0.7",
    "pyproj>=3.6",
    "shapely>=2.0",
]
ml = [
    "torch>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "poethepoet>=0.24.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.2.0",
    "ruff>=0.1.0",
    "pre-commit>=4.2.0",
    "ipython>=8.0.0",
    "ipykernel>=6.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D"]
extend-ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks]
test = "pytest -n auto tests/"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format-fix = "ruff format ."
precommit = "pre-commit run --all-files"
