[project]
name = "atlantis"
version = "0.1.1"
description = "ML-ready archive of satellite-derived flood inundation observations (ECMWF Code for Earth 2026)"
readme = "README.md"
requires-python = ">=3.11, <3.15"
authors = [{ name = "Stylianos Lagaras" }, { name = "Ioannis Kalfas" }]
dependencies = [
  "typer",
  "loguru",
  "rich",
  "boto3",
  "universal-pathlib",
  "s3fs>=2024.10.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "geopandas>=1.1.3",
  "matplotlib>=3.10.9",
  "ipympl>=0.10.0",
  "plotly>=6.7.0",
  "rasterstats>=0.21.0",
]

[project.scripts]
atlantis = "atlantis.cli:cli"

[project.optional-dependencies]
geo = [
  "xarray>=2024.1",
  "zarr>=3.0",
  "rioxarray>=0.15",
  "pystac>=1.9",
  "pystac-client>=0.7",
  "pyproj>=3.6",
  "shapely>=2.0",
  "rasterio>=1.3",
  "beautifulsoup4>=4.12",
  "requests>=2.34.2",
]
ml = ["torch>=2.12.0", "numpy>=2.4.5", "scikit-learn>=1.4", "matplotlib>=3.8"]
notebooks = [
  "atlantis[geo,ml]",
  "earthkit-data",
  "rasterio>=1.3",
  "affine>=2.4",
  "cartopy>=0.22",
  "odc-stac>=0.4",
  "geopandas>=0.14",
  "beautifulsoup4>=4.12",
  "requests>=2.34.2",
  "metview>=1.16",
]

[dependency-groups]
dev = [
  "pytest-env",
  "poethepoet>=0.46.0",
  "pytest>=9.0.0",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.2.0",
  "ruff>=0.15.13",
  "pre-commit>=4.2.0",
  "ipython>=8.0.0",
  "ipykernel>=6.30.0",
  "nbstripout>=0.9.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build]
include = ["src/atlantis/fetchers/viirs/data/*.geojson"]

[tool.hatch.build.targets.wheel]
packages = ["src/atlantis"]

[tool.hatch.build.targets.sdist]
include = ["/src/atlantis", "/tests", "/docs", "/README.md", "/pyproject.toml"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["W", "F", "I"]
extend-ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["atlantis"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poe.tasks]
test = "pytest -n auto tests/"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format-fix = "ruff format ."
precommit = "pre-commit run --all-files"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
