[project]
name = "atlantis"
version = "0.1.1"
description = "ML-ready archive of satellite-derived flood inundation observations (ECMWF Code for Earth 2026)"
readme = "README.md"
requires-python = ">=3.12, <3.15"
authors = [{ name = "Stylianos Lagaras" }, { name = "Ioannis Kalfas" }]
dependencies = [
  "typer>=0.27.0",
  "loguru>=0.7.0",
  "rich>=13.0.0",
  "boto3",
  "universal-pathlib",
  "s3fs>=2026.6.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.14.2",
  "geopandas>=1.1.4",
  "pandas[pyarrow] < 3",
  "matplotlib>=3.11.1",
  "ipympl>=0.10.0",
  "plotly>=6.9.0",
  "rasterstats>=0.21.0",
  "odc-stac>=0.4",
  "numpy>=2",
  "rasterio>=1.4",
  "rioxarray>=0.22",
  "xarray",
  "zarr>=3.2",
  "requests>=2.34.2",
  "gdal==3.13.2",
  "pystac>=1.15.1",
  "pystac-client>=0.7",
  "beautifulsoup4>=4.12",
]

[project.scripts]
atlantis = "atlantis.cli:cli"

[project.optional-dependencies]
geo = ["pyproj>=3.6", "shapely>=2.0"]
ml = ["torch>=2.12.0", "scikit-learn>=1.9.0"]
batch = [
  "atlantis[geo]",
  "dask[distributed]>=2026.7.1", # LocalCluster + Client + as_completed
  "bokeh>=3.0",                  # enables the Dask dashboard at :8787
  "rio-cogeo>=5.0",              # `rio cogeo validate` for verification
]
stac = [
  "atlantis[geo]",
  "pystac>=1.9",
  "pystac-client>=0.7",     # pystac, pystac-client, xarray, zarr
  "stac-geoparquet>=0.8.1", # serverless columnar item index (scale path)
  "xpystac>=0.1",           # open a STAC Item/Asset/Collection as xarray (Zarr)
]
viz = [
  "atlantis[geo]",    # xarray/zarr datacube reads
  "hvplot>=0.10",     # xarray .hvplot interface (time slider)
  "holoviews>=1.18",  # backing element model
  "panel>=1.4",       # local dashboard server (`panel serve`)
  "datashader>=0.19", # server-side rasterisation of large grids
  "numba>=0.60",
  "geoviews>=1.11",   # optional basemap / coastlines
  "bokeh>=3.0",       # hvplot rendering backend
]
notebooks = [
  "atlantis[geo,ml]",
  "earthkit-data",
  "affine>=2.4",
  "cartopy>=0.22",
  "beautifulsoup4>=4.12",
  "requests>=2.34.2",
  "metview>=1.16",
]
ui = ["nicegui>=2.0"]

[dependency-groups]
dev = [
  "pytest-env",
  "poethepoet>=0.48.0",
  "pytest>=9.1.1",
  "pytest-cov>=6.0.0",
  "pytest-timeout>=2.3.0",
  "pytest-xdist>=3.2.0",
  "ruff>=0.15.22",
  "pre-commit>=4.6.1",
  "ipython>=9.15.0",
  "ipykernel>=7.3.0",
  "nbstripout>=0.9.1",
  "ripgrep>=15.1.0",
  "atlantis[geo]",
  "atlantis[viz]",
  "atlantis[stac]",
  "geoparquet-io",
]
docs = ["mkdocs-material>=9.7.7", "mkdocstrings[python]>=0.25"]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build]
include = ["src/atlantis/fetchers/viirs/data/*.geojson"]

[tool.hatch.build.targets.wheel]
packages = ["src/atlantis"]

[tool.hatch.build.targets.sdist]
include = ["/src/atlantis", "/tests", "/docs", "/README.md", "/pyproject.toml"]


[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D"]
extend-ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"scripts/**" = ["D"]
"src/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
env = ["R:AWS_PROFILE=default", "ATLANTIS_E2E_STRICT_REFERENCE_BYTES=1"]
markers = [
  "e2e: end-to-end tests requiring network access (STAC API + S3)",
  "slow: slow integration tests that spin a real Dask cluster",
]

[tool.coverage.run]
source = ["atlantis"]
omit = ["*/tests/*", "*/scripts/*", "*/utils/setup.py", "*/stac/*", "*/cli.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poe.tasks]
test = "pytest -n auto tests/"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format-fix = "ruff format ."
precommit = "pre-commit run --all-files"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
